<resources>
    <string name="app_name">ReminderApp</string>
    <string name="msg_welcome">Reminder App</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password (8-40 chars)</string>
    <string name="reg_password2">Verify Password</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="btn_logout">Log Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Find location</string>
    <string name="pick_place">Add Location</string>
    <string name="txt_update_password">Update Password</string>
    <string name="txt_new_password">New Password (8-40 chars)</string>
    <string name="txt_new_verify">Confirm New Password</string>
    <string name="txt_submit_task">Submit Task</string>
    <string name="txt_task_name">Task Name</string>
    <string name="txt_task_date">Task Date</string>
    <string name="txt_task_location">Task Location</string>
    <string name="btn_new">New Task</string>
    <string name="btn_account">Account</string>

</resources>
